# recall

./: CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  TASK.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
src/recall/: __init__.py  __main__.py  chat.py  cli.py  config.py  embedder.py  store.py
src/recall_cli.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
